# devcamp8-tragedy-of-commons

./: .gitignore  README.md  conductor-config.yml  custom-holochain.nix  default.nix  dev-setup.md  holochain_106_node12.nix  package-lock.json  package.sh  sequence_diagram.md  tragedy-of-commons.code-workspace
.github/workflows/docs/: sequence_diagram.md
dna/zomes/game_logic/src/: game_code.rs  game_move.rs  game_round.rs  game_session.rs  lib.rs  player_profile.rs  utils.rs
tests/: package.json
tests/src/game-of-commons/: game_logic.ts
ui/: package.json
ui-hedayat-suggetion/: ReadMe.md
ui-hedayat-suggetion/frontend/: package-lock.json  package.json  webpack.config.js
ui-hedayat-suggetion/holo-layer/: run-dna
ui/basic/: game.html  index.html
ui/lit-ui-hedayat/: ReadMe.html
ui/lit-ui-hedayat/frontend/: tsconfig.json
ui/svelte-ui/: package-lock.json  package.json  rollup.config.js
ui/svelte-ui/public/: global.css  index.html
ui/svelte-ui/src/: App.svelte  Game.svelte  GameMove.svelte  GameResults.svelte  GameRound.svelte  NavBar.svelte  StartMenu.svelte  app-client.js  main.js  stores.js  utils.js  zome.js
ui/svelte-ui/tests/: README  test_ui_2players.robot
zome/: Cargo.toml  README.md  run_build.sh  run_sandbox.sh  run_tests.sh
zome/tests/: package-lock.json  package-lock.json.backup  package.json
zome/tests/src/: common.ts  index.ts  two-players-full-game-finished.ts  two-players-lose-first-round.ts
zome/workdir/dna/: dna.yaml  sample.dna
zome/workdir/happ/: happ.yaml  run_sandbox_mdns.sh  run_sandbox_mem.sh  run_sandbox_quic.sh  run_sandbox_remote_network.sh  sample-happ.happ
zome/workdir/webhapp/: web-happ.yaml
zome/zomes/tragedy_of_commons/: Cargo.toml  Cargo.toml.for_mock_tests  run_cargo_test_with_mocks.sh
zome/zomes/tragedy_of_commons/src/: error.rs  game_code.rs  game_move.rs  game_round.rs  game_session.rs  lib.rs  player.rs  player_profile.rs  types.rs  utils.rs
(+15 files in other folders)
