[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "tragedy_of_commons"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tragedy_of_commons"

[dependencies]
hdk = "0.0.103"
derive_more = "0"
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1.0.0"
chrono = "0.4.19"
mockall_double = "*"
mockall = "*"


[dev-dependencies]
fixt = "0.0.5" 
holochain_types = "0.0.3"

[features]
default = []
mock = ["hdk/mock", "hdk/test_utils", "hdk/fixturators"]