[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "tragedy_of_commons"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tragedy_of_commons"

[dependencies]
hdk = { git = "https://github.com/holochain/holochain", rev = "792c707e8abeb9566de6ddac04f699f208b923ff" }
derive_more = "0"
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1.0.0"
chrono = "0.4.19"
mockall_double = "*"
mockall = "*"

[dev-dependencies]
#holochain_types = {version = "0.0.5", features=["fixturators", "subtle-encoding"]}
#fixt = "0.0.5"

[features]
default = []
mock = ["hdk/mock", "hdk/test_utils"]