[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "tragedy_of_commons"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tragedy_of_commons"

[dependencies]
hdk = "0.0.108"
#holo_hash = {version = "*", features=["encoding"]}
derive_more = "0"
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1.0.0"
chrono = "0.4.19"
mockall_double = "*"
mockall = "*"

[dev-dependencies]
#holochain_types = {version = "0.0.5", features=["fixturators", "subtle-encoding"]}
#fixt = "0.0.5"

[features]
default = []
mock = ["hdk/mock", "hdk/test_utils"]